
plugins {
	id 'java'
	id 'org.springframework.boot' version '3.0.4'
	id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.jumbo'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '19'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

bootRun {
	systemProperties = System.properties as Map<String, ?>
}

compileJava {
	options.compilerArgs = [
			'-Amapstruct.defaultComponentModel=spring',
			'-Amapstruct.suppressGeneratorTimestamp=true'
	]
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter:3.1.0'
	implementation 'org.springframework.boot:spring-boot-starter-web:3.1.0'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.4'
	implementation 'org.springframework.boot:spring-boot-starter-validation:3.0.4'
	implementation 'org.springframework.boot:spring-boot-starter-security:3.0.4'
	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.0.4'
	implementation group: 'org.mapstruct', name: 'mapstruct', version: '1.5.3.Final'
	implementation 'org.hibernate:hibernate-jpamodelgen:6.1.7.Final'
	implementation 'org.postgresql:postgresql:42.6.0'
	compileOnly 'org.projectlombok:lombok:1.18.26'
	compileOnly 'org.mapstruct:mapstruct-processor:1.5.3.Final'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
	annotationProcessor 'org.projectlombok:lombok:1.18.26'
	annotationProcessor 'org.hibernate:hibernate-jpamodelgen:6.1.7.Final'
	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
	testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.0'
}

tasks.named('test') {
	useJUnitPlatform()
}
